--- a/styles.css
+++ b/styles.css
@@ -3401,6 +3401,11 @@ input[type="text"].note-toolbar-setting-error,
 .note-toolbar-setting-mini-dialog {
     width: calc(var(--dialog-width) / 1.5);
 }
+.note-toolbar-setting-position-group {
+    & .setting-item:has(+ .setting-item[data-active="false"]) {
+        padding-bottom: 0;
+    }
+}
 .note-toolbar-setting-small-heading {
     color: var(--color-base-50);
     font-size: var(--font-ui-smaller);
